Fix nest ul top spacing

--- a/static/sass/styles-v1.scss
+++ b/static/sass/styles-v1.scss
@@ -98,10 +98,10 @@ html {
   padding: $sp-x-small $sp-small;
 }
 
-// Add spacing for nested lists
+// Add spacing for nested lists in body copy
 // This is a change to be made upstream in vanilla-framework
 // https://github.com/vanilla-framework/vanilla-framework/issues/960
-li {
+li:not(.p-breadcrumbs__item) {
   ol, ul, .p-list {
     margin-top: $sp-medium;
     padding-left: $sp-medium;
